examples/python_application/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web-application
  labels:
    app: python-web-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-web-application
  template:
    metadata:
      labels:
        app: python-web-application
    spec:
      containers:
      - name: python-web-app
        image: gpurandhar/python-web-app:v1
        volumeMounts:
        - name: app-config
          mountPath: "/tmp"
          readOnly: true      
        ports:
        - containerPort: 8000
      volumes:
      # You set volumes at the Pod level, then mount them into containers inside that Pod
      - name: app-config
        configMap:
          # Provide the name of the ConfigMap you want to mount.
          name: myconfigmap
