examples/python_application/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: python-web-application
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
